<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eclipse</groupId>
	<artifactId>jakartaee-hello-world</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>jakartaee-hello-world</name>
	<description>
		This is a very simple Jakarta EE application generated by the official Eclipse Starter.
	</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.report.sourceEncoding>UTF-8</project.report.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<jakartaee-api.version>10.0.0</jakartaee-api.version>
		<payara.version>6.2024.1</payara.version>
		<compiler-plugin.version>3.11.0</compiler-plugin.version>
		<war-plugin.version>3.4.0</war-plugin.version>
		<payara-micro-plugin.version>2.0</payara-micro-plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-web-api</artifactId>
			<version>${jakartaee-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- Embedded Jakarta EE runtime -->
		<dependency>
			<groupId>fish.payara.extras</groupId>
			<artifactId>payara-micro</artifactId>
			<version>${payara.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20210307</version>
		</dependency>
		<dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>5.0.0</version>
            <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet.jsp.jstl</groupId>
			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
			<version>2.0.0</version>
    	</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>4.0.0</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
			<version>2.0.0</version>
    	</dependency>
	</dependencies>

	<build>
		<finalName>jakartaee-hello-world</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>${war-plugin.version}</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>

				<!-- Execute 'mvn clean package payara-micro:start' to run the application. -->
				<plugin>
					<groupId>fish.payara.maven.plugins</groupId>
					<artifactId>payara-micro-maven-plugin</artifactId>
					<version>${payara-micro-plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>start</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<artifactItem>
							<groupId>fish.payara.extras</groupId>
							<artifactId>payara-micro</artifactId>
							<version>${payara.version}</version>
						</artifactItem>
						<deployWar>true</deployWar>
						<contextRoot>/</contextRoot>
					</configuration>
				</plugin>
		</plugins>
	</build>
</project>
